feat(recipes): standard recipes (recent version improved for Caddy support and better modularity

--- a/devops/requirements.yml
+++ b/devops/requirements.yml
@@ -4,3 +4,6 @@
   version: 1.4.0
 - src: git@gitlab.com:vividlogic/ansible-roles/papertrail.git
   scm: git
+- src: git@gitlab.com:vividlogic/ansible-roles/uwsgi_app.git
+  scm: git
+  version: 0.7.0
