--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,5 @@ ipykernel
 django-random-queryset
 django-bootstrap-v5
 django-js-error-hook
+django-galleryfield
 git+https://github.com/phoebebright/django-keycloak.git
