--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ django-bootstrap-v5
 django-js-error-hook
 django-galleryfield
 git+https://github.com/phoebebright/django-keycloak.git
+sorl-thumbnail
