--- a/devops/playbook.yml
+++ b/devops/playbook.yml
@@ -10,6 +10,7 @@
         project:
           name: equistatue
           domain: statues.whinn.ie
+          static_url: /static
           touch_logs: 
             - django.log
             - uwsgi.log
