fix(requirements): django4 version of keycloak integration

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,4 @@ django-random-queryset
 django-bootstrap-v5
 django-js-error-hook
 django-galleryfield
-git+https://github.com/phoebebright/django-keycloak.git
+git+https://github.com/phoebebright/django-keycloak.git@django4
