--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,6 @@ django-random-queryset
 django-bootstrap-v5
 django-js-error-hook
 django-galleryfield
+sorl-thumbnail
 
 git+https://github.com/phoebebright/django-keycloak.git@django4
