--- a/devops/playbook.yml
+++ b/devops/playbook.yml
@@ -5,8 +5,10 @@
   roles:
     - role: uwsgi_app
       vars:
+        emperor_port: 2023
+        emperor_port_to: /home/django/sockets/equistatue.sock
         web_server: caddy
-        uwsgi_config_template: false
+        uwsgi_config_template: "{{ playbook_dir }}/templates/Caddyfile"
         project:
           name: equistatue
           domain: statues.whinn.ie
