--- a/devops/templates/Caddyfile
+++ b/devops/templates/Caddyfile
@@ -3,7 +3,7 @@
   {% if project.static_url is defined %} 
     handle_path {{ project.static_url }}/* {
       root * {{ project_shared_static_dir }}
-      fileserver
+      file_server
     }
   {% endif %}
 
