--- a/devops/requirements.yml
+++ b/devops/requirements.yml
@@ -7,3 +7,7 @@
 - src: git@gitlab.com:vividlogic/ansible-roles/uwsgi_app.git
   scm: git
   version: 0.7.13
+- src: https://github.com/hleb-rubanau/ansible-role-docker
+  name: docker
+- src: https://github.com/hleb-rubanau/ansible-role-nginx-letsencrypted
+  name: nginx
