--- a/requirements.txt
+++ b/requirements.txt
@@ -15,5 +15,5 @@ django-bootstrap-v5
 django-js-error-hook
 django-galleryfield
 sorl-thumbnail
-
-git+https://github.com/phoebebright/django-keycloak.git@django4
+requests
+nanoid
